--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,9 +58,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/personne_1.jpg
+     - assets/images/personne_2.jpg
+     - assets/images/personne_3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -73,10 +74,27 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: MontSerrat
+      fonts:
+        - asset: assets/montserrat/Montserrat-Black.ttf
+        - asset: assets/montserrat/Montserrat-BlackItalic.ttf
+        - asset: assets/montserrat/Montserrat-Bold.ttf
+        - asset: assets/montserrat/Montserrat-BoldItalic.ttf
+        - asset: assets/montserrat/Montserrat-ExtraBold.ttf
+        - asset: assets/montserrat/Montserrat-ExtraBoldItalic.ttf
+        - asset: assets/montserrat/Montserrat-ExtraLight.ttf
+        - asset: assets/montserrat/Montserrat-ExtraLightItalic.ttf
+        - asset: assets/montserrat/Montserrat-Italic.ttf
+        - asset: assets/montserrat/Montserrat-Light.ttf
+        - asset: assets/montserrat/Montserrat-LightItalic.ttf
+        - asset: assets/montserrat/Montserrat-Medium.ttf
+        - asset: assets/montserrat/Montserrat-MediumItalic.ttf
+        - asset: assets/montserrat/Montserrat-Regular.ttf
+        - asset: assets/montserrat/Montserrat-SemiBold.ttf
+        - asset: assets/montserrat/Montserrat-SemiBoldItalic.ttf
+        - asset: assets/montserrat/Montserrat-Thin.ttf
+        - asset: assets/montserrat/Montserrat-ThinItalic.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
